# Slicer3D-Extension-MultiLabel2D

./: .gitignore  .gitmodules  LICENSE  README.md  extract_prod.sh  setup.sh
CxrAISlicer/: CMakeLists.txt
CxrAISlicer/MultiLabel2D/: CMakeLists.txt  MultiLabel2D.py
CxrAISlicer/MultiLabel2D/Resources/UI/: MultiLabel2D.ui
CxrAISlicer/MultiLabel2D/utils/: data_utils.py  node_utils.py
CxrAISlicer/SegmentEditorMultiLabel2D/: CMakeLists.txt  SegmentEditorMultiLabel2D.py
CxrAISlicer/SegmentEditorMultiLabel2D/Resources/UI/: SegmentEditorMultiLabel2D.ui
CxrAISlicer/SegmentEditorMultiLabel2D/utils/: __init__.py  data_utils.py  gitlab_snippets.py  label_manager.py  misc.py  node_utils.py
CxrAISlicer/SegmentEditorMultiLabel2D/zarr_io/: __init__.py  bin_array_zarr_io.py  segmentation_zarr_io.py  slicer_segment_zarr_io.py
CxrExt/: CMakeLists.txt
CxrExt/SlicerTest/: CMakeLists.txt  SlicerTest.py
CxrExt/SlicerTest/Resources/UI/: SlicerTest.ui
MultiLabel2D/: CMakeLists.txt
MultiLabel2D/SegmentEditorMultiLabel2D/: SegmentEditorMultiLabel2D.py
MultiLabel2D/SegmentEditorMultiLabel2D/utils/: gitlab_snippets.py  label_manager.py  misc.py
MultiLabel2D/SegmentEditorMultiLabel2D/zarr_io/: __init__.py
